# vgi-news

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-entrypoint.sh  news_worker.py  pyproject.toml  vgi-lint.toml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  run-integration.sh
scripts/: run_sql_e2e.py
test/sql/: news_errors.test  news_scan_state.test  news_search.test
tests/: conftest.py  test_live_gdelt.py  test_mock_server.py  test_parsers.py  test_worker.py
tests/fixtures/: gdelt_artlist.json  newsapi_error.json  newsapi_everything.json
vgi_news/: __init__.py  discovery.py  schema_utils.py  tables.py  worker.py
vgi_news/providers/: __init__.py  base.py  gdelt.py  newsapi.py
