[project]
name = "vgi-news"
version = "0.1.0"
description = "A VGI worker bringing global news search (GDELT, NewsAPI) into DuckDB/SQL"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "Query Farm" }]
keywords = ["vgi", "duckdb", "news", "gdelt", "newsapi", "search"]
dependencies = [
    "vgi-python>=0.8.3",
    "httpx>=0.27",
    "pyarrow>=16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "mypy>=1.10",
    "pydoclint>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_news"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Exclude the live (network) smoke tests by default; run them with `-m live`.
addopts = "-m 'not live'"
markers = [
    "live: hits a real news API over the network (GDELT, free); excluded from the CI gate.",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.per-file-ignores]
# Docstrings (D) are enforced on the worker package/script (product code), not tests.
"tests/**" = ["D"]
# The PEP 723 inline-script header wraps dependency pins that should stay one-per-line.
"news_worker.py" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
# Docstring consistency gate (complements ruff's D rules: ruff checks docstring
# shape, pydoclint checks documented args/returns/attrs match the code).
style = "google"
arg_type_hints_in_docstring = false
check_return_types = false
check_yield_types = false
check_class_attributes = true
skip_checking_raises = true
allow_init_docstring = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true
